--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                 {
                     name: "دجلة",
                     description: "قناة دجلة الفضائية العراقية",
-                    image: "https://dijlah.tv/templates/default/images/logo.png",
+                    image: "https://te.legra.ph/file/e64d9d66fea4d7f2d9133.png",
                     url: "https://ghaasiflu.online/Dijlah/index.m3u8"
                 },
                 {
                     name: "U TV",
                     description: "قناة يو تي في العراقية",
-                    image: "https://www.utv.iq/assets/images/logo.png",
+                    image: "https://te.legra.ph/file/5e2ffbfab54485e95ca89.png",
                     url: "https://ythlsgo.onrender.com/channel/UCnPCuJUVRZkufQ2vgmBZwJA.m3u8"
                 }
             ],
@@ -308,4 +308,4 @@
         };
     </script>
 </body>
-</html>  
+</html> 
